# amnis-ros

./: README.md  dashboard.html  mkdocs.yml
docs/: index.md
docs/development/: dashboard.md  launch_file.md  setup.md
docs/nodes/: brake_controller.md  game_controller.md  joystick_normalizer.md  overview.md  powertrain_controller.md  steer_controller.md  topic_aggregator.md  vehicle_controller.md
docs/topics/: brake_command.md  joystick_command.md  overview.md  powertrain_command.md  steer_command.md
src/amnis_controller/: CMakeLists.txt  SENSOR_CALIBRATION_GUIDE.md  package.xml  requirements.txt  setup.cfg  setup.py
src/amnis_controller/amnis_controller/: __init__.py  brake_controller_node.py  joystick_normalizer_node.py  normalization.py  pid_controller.py  pid_steer_controller_node.py  powertrain_controller_node.py  sensor_input_node.py  sensor_reader_node.py  steer_controller_node.py  topic_aggregator_node.py  vehicle_controller_node.py
src/amnis_controller/amnis_controller/drivers/: __init__.py  adc_driver.py  ehb_driver.py  hbridge_driver.py  pigpio_connection.py  pwm_driver.py  transmission_driver.py
src/amnis_controller/launch/: full_controller.launch.py
src/amnis_controller/msg/: BrakeCommand.msg  JoystickCommand.msg  ModeCommand.msg  PowertrainCommand.msg  SensorData.msg  SteerCommand.msg  VehicleState.msg
src/amnis_controller/test/: test_joystick_node.py
